# haskell-playground

./: .gitignore  card_validator.hs
bittorrent/: README.markdown  bittorrent.cabal  bittorrent.hs
brackets/: README.md  bracks.hs
browser/: Dom.hs  README.md
crypto-challenge/: README.md  crypto-challenge.cabal
crypto-challenge/crypto-challenge/: crypto-challenge.cabal
crypto-challenge/crypto-challenge/src/: Lib.hs
crypto-challenge/src/: Lib.hs
crypto-challenge/test/: Spec.hs
data-types/: LICENSE  data-types.cabal
data-types/src/: BTree.hs
dice-of-doom/: README.md  dod.hs  watch_file.sh
functional-pearls/: benchout.html  functional-pearls.cabal
functional-pearls/app/: Main.hs
functional-pearls/bench/: Bench.hs
functional-pearls/src/: FreeNumber.hs  Surpassing.hs
functional-pearls/test/: Spec.hs  SpecSurpassing.hs
lenses/: mylens.hs
listmonad/: secret  secret.hs
loeb/: README.md  loeb.hs
monadTrans/: README.markdown  monadTrans.hs
monte_carlo/: montecarlo  montecarlo.hs
mutables/: 2  README.markdown  mutables.hs
pipes/: Main.hs  PipesTut.cabal  README.md
playground/: examinestack.hs  testReddit.hs  typeAdventures.hs
tarjan/: tarjan.hs
